Use 700 weight for h1 and proper italic font

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script>
       WebFont.load({
         google: {
-          families: ['Playfair Display:600', 'Raleway:200']
+          families: ['Playfair Display:700,700italic', 'Raleway:200']
         }
       });
     </script>
